--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img src="./assets-20230928T194743Z-001/immagini/img_3.jpg" alt="watch">
             </div>
             <div class="col24">
-                    <img src="./assets-20230928T194743Z-001/immagini/img_4.jpg" alt="dog&pet">
+                    <img src="./assets-20230928T194743Z-001/immagini/img_4.jpg" alt="dog&cat">
             </div>
         </section>
 
